--- a/consensus-clustering/consensus_clustering_with_py.Rmd
+++ b/consensus-clustering/consensus_clustering_with_py.Rmd
@@ -7,12 +7,11 @@ This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute
 
 Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
 
-
 ```{r}
-use_python("/usr/local/bin/python")
-```
-
-```{r}
+if(!require(parallel)) {
+  install.packages("parallel")
+}
+library(parallel)
 library(diceR)
 library(ggplot2)
 library(ggfortify)
@@ -20,10 +19,17 @@ library(cluster)
 library(Rtsne)
 library(data.table)
 library(reticulate)
-pyclustering<-import('pyclustering')
-pyclustering$cluster$cure
-cure<-py_to_r(pyclustering$cluster$cure)
+use_python("/usr/local/bin/python")
+source_python("read_cure.py")
 
+pyclustering<-import('pyclustering')
+np<-import('numpy')
+pd<-import('pandas')
+
+
+cure<-pyclustering$cluster$cure$cure
+
+colon_data_df<-pd$read_table("../dataFile/201126/Colon_merged_273samples.txt")
 colon_data<-fread("../dataFile/201126/Colon_merged_273samples.txt")
 ```
 
@@ -38,7 +44,7 @@ colon_data<-colon_data[, -1]
 
 
 ```{r}
-obj<-dice(colon_data,nk=10:20,reps=10, algorithms = c("hc","km","diana"), cons.funs = c("majority","CSPA","LCE"), progress = TRUE , evaluate = F ,prep.data = "full")
+obj<-dice(colon_data,nk=20,reps=10, algorithms = c("hc","km","diana"), cons.funs = c("majority","CSPA","LCE"), progress = TRUE , evaluate = F, prep.data = "full")
 ```
 ```{r}
 obj$clusters
@@ -118,12 +124,24 @@ autoplot(prcomp(c_data_df, center = T, scale. = T),
 
 ```{r}
 #consensus clustering with another function
-obj<-dice(colon_data,nk=10:20,reps=10, algorithms = c("km","diana","cure"), cons.funs = c("majority","CSPA","LCE"), progress = TRUE , evaluate = F ,prep.data = "full")
+obj<-dice(colon_data,nk=19:20,reps=10, algorithms = c("km","diana","cure"), cons.funs = c("majority","CSPA","LCE"), progress = TRUE , evaluate = F ,prep.data = "full")
+```
+cure 알고리즘 내의 오류 존재, 제대로 돌아가지 않으므로 dice 대신 consensus_clustering method를 사용
+
+```{r}
+cc <- consensus_cluster(colon_data, reps = 6, algorithms = c("km", "diana", "cure"), distance = c("euclidean"), progress = T)
+
+```
+```{r}
+consensus_cluster
 ```
 
-
-
-
+```{r}
+cure_result<-cure_func('../dataFile/201126/Colon_merged_273samples.txt',19)
+cure_result
+cluster<-cure_result$get_clusters()
+cluster
+```
 
 
 
