--- a/consensus-clustering/consensus_clustering_with_py.Rmd
+++ b/consensus-clustering/consensus_clustering_with_py.Rmd
@@ -22,20 +22,27 @@ library(reticulate)
 use_python("/usr/local/bin/python")
 source_python("clustering_func.py")
 
+
 pyclustering<-import('pyclustering')
 np<-import('numpy')
 pd<-import('pandas')
 
-colon_data_df<-pd$read_table("../dataFile/201126/Colon_merged_273samples.txt")
-colon_data<-fread("../dataFile/201126/Colon_merged_273samples.txt")
+cure<-pyclustering$cluster$cure$cure
+
+colon_data_df<-pd$read_table("../dataFile/Colon_merged.txt")
+colon_data<-fread("../dataFile/Colon_merged.txt")
+row_name<-unlist(colon_data[,1])
+colon_data<-colon_data[, -1]
 ```
 
 ```{r}
-colon_data<-colon_data[, -12980]
-lable<-colon_data[, 12979]
-colon_data<-colon_data[, -12979]
+colon_data<-colon_data[, -12955]
+colon_data<-colon_data[,-12955]
+lable<-colon_data[, ncol(colon_data)]
+colon_data<-colon_data[, -nco]
 row_name<-unlist(colon_data[,1])
 colon_data<-colon_data[, -1]
+colon_data<-as.data.frame(colon_data)
 ```
 
 ```{r}
@@ -117,26 +124,36 @@ autoplot(prcomp(c_data_df, center = T, scale. = T),
 ```
 
 ```{r}
+cure_func(colon_data,as.integer(19))
 
-birch_cluster<-BIRCH_func(colon_data, as.integer(19))
 
-assign("CURE", cure_func, 1)
-assign("BIRCH", BIRCH_func, 1)
 
 CURE<-function(df, k){
+  arr<-NULL
   cure_cluster<-cure_func(df,as.integer(k))
   for(i in 1:k){
     for(j in 1:length(cure_cluster[[i]])){
       arr[(cure_cluster[[i]][j]+1)]<-i
     }
   }
-  arr<-as.integer(arr)
-  return(arr)
+  as.integer(arr)
 }
+
+BIRCH<-function(df, k){
+  arr<-NULL
+  BIRCH_cluster<-BIRCH_func(df,as.integer(k))
+  for(i in 1:k){
+    for(j in 1:length(BIRCH_cluster[[i]])){
+      arr[(BIRCH_cluster[[i]][j]+1)]<-i
+    }
+  }
+  as.integer(arr)
+}
+
 
 cure_cluster<-cure_func(colon_data, as.integer(19))
 
-cure_data<-CURE(colon_data,19)
+cure_data<-CURE(colon_data_df,19)
 
 ```
 
@@ -152,14 +169,15 @@ cure_cluster
 birch_cluster
 ```
 ```{r}
-km <- function(x, k) {
+KM <- function(x, k) {
   as.integer(stats::kmeans(x, k)$cluster)
 }
 
-km_data<-km(colon_data, 19)
-km_data
+KM(colon_data,19)
+CURE(colon_data,19)
 
-cc <- consensus_cluster(colon_data, nk=19, reps = 10, algorithms = c("CURE","BIRCH"), distance = c("euclidean"), progress = T)
+cc <- consensus_cluster(colon_data, nk=19, reps = 10, algorithms = c("CURE", "BIRCH"), progress = T, prep.data = "full")
+cc
 ```
 
 
