--- a/consensus-clustering/consensus_clustering_with_py.Rmd
+++ b/consensus-clustering/consensus_clustering_with_py.Rmd
@@ -8,10 +8,6 @@ This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute
 Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
 
 ```{r}
-if(!require(parallel)) {
-  install.packages("parallel")
-}
-library(parallel)
 library(diceR)
 library(ggplot2)
 library(ggfortify)
@@ -29,7 +25,7 @@ pd<-import('pandas')
 
 cure<-pyclustering$cluster$cure$cure
 
-colon_data_df<-pd$read_table("../dataFile/Colon_merged.txt")
+colon_data<-pd$read_table("../dataFile/Colon_merged.txt")
 colon_data<-fread("../dataFile/Colon_merged.txt")
 row_name<-unlist(colon_data[,1])
 colon_data<-colon_data[, -1]
@@ -37,9 +33,9 @@ colon_data<-colon_data[, -1]
 
 ```{r}
 colon_data<-colon_data[, -12955]
-colon_data<-colon_data[,-12955]
+colon_data<-colon_data[,-12954]
 lable<-colon_data[, ncol(colon_data)]
-colon_data<-colon_data[, -nco]
+colon_data<-colon_data[, -ncol]
 row_name<-unlist(colon_data[,1])
 colon_data<-colon_data[, -1]
 colon_data<-as.data.frame(colon_data)
@@ -124,9 +120,10 @@ autoplot(prcomp(c_data_df, center = T, scale. = T),
 ```
 
 ```{r}
-cure_func(colon_data,as.integer(19))
-
-
+result<-cure_func(colon_data,as.integer(19))
+result
+result<-BIRCH_func(colon_data,as.integer(19))
+result
 
 CURE<-function(df, k){
   arr<-NULL
@@ -153,7 +150,7 @@ BIRCH<-function(df, k){
 
 cure_cluster<-cure_func(colon_data, as.integer(19))
 
-cure_data<-CURE(colon_data_df,19)
+cure_data<-CURE(colon_data,19)
 
 ```
 
@@ -176,7 +173,7 @@ KM <- function(x, k) {
 KM(colon_data,19)
 CURE(colon_data,19)
 
-cc <- consensus_cluster(colon_data, nk=19, reps = 10, algorithms = c("CURE", "BIRCH"), progress = T, prep.data = "full")
+cc <- consensus_cluster(colon_data, nk=19, reps = 10, algorithms = c("CURE"), progress = T, prep.data = "full")
 cc
 ```
 
